<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name" translatable="false">Trolls De Jeux</string>
    <string name="title_activity_login_register" translatable="false">Login or Register</string>
    <string name="app_subtitle" translatable="false">Association Antiboise\nJeux de Société</string>
    <string name="sort_alpha" translatable="true">Alphabetical order</string>
    <string name="sort_bgg" translatable="true">BGG Ranking</string>

    <string name="menu_users" translatable="true">
        Users
    </string>

    <string name="intro" translatable="true">
        You may click on the little button at the bottom right corner to download the users\' information!
    </string>

    <string name="missing_network" translatable="true">
        I fear you\'re not connected to the Internet.
        Please try again in a few minutes.
    </string>

    <string name="loading_users" translatable="true">
        Downloading users\' information…
    </string>

    <string name="user_game_count" translatable="true">
        %1$d owned games
    </string>

    <string name="loading_end" translatable="true">
        It\'s over! You may now click on an user via the left navigation menu!
    </string>

    <string name="loading_end_cache" translatable="true">
        You had a cache! If you\'d like to update the users\' list, click on the little button at
        the bottom right corner!
    </string>

    <string name="navigation_drawer_open" translatable="true">
        Open navigation bar
    </string>

    <string name="navigation_drawer_close" translatable="true">
        Close navigation bar
    </string>

    <string name="players_count_diff" translatable="true">
        For %1$d to %2$d players
    </string>

    <string name="players_count_equal" translatable="true">
        For %1$d player(s)
    </string>

    <!-- TODO: Find a better way to inject HTML in strings -->
    <string name="game_information" translatable="true">
        &lt;p>Created by &lt;b>%1$s&lt;/b>&lt;/p>
        &lt;p>For games lasting &lt;b>%2$d&lt;/b> minutes&lt;/p>
        &lt;p>Published in &lt;b>%3$d&lt;/b>&lt;/p>
    </string>

    <string name="bgg_rank" translatable="true">
        &lt;p>Currently occupying place n. &lt;b>%1$d&lt;/b> on &lt;i>BoardGameGeek&lt;/i>&lt;/p>
    </string>

    <string name="game_random" translatable="true">
        Random game
    </string>

    <string name="open_bgg" translatable="true">
        BGG
    </string>

    <string name="show_expansions" translatable="true">
        Show expansions
    </string>

    <string name="hide_expansions" translatable="true">
        Hide expansions
    </string>

    <string name="version_number" translatable="true">
        Version %1$s
    </string>

    <string name="philibert_header" translatable="true">
        Here is what I found on the Internet.
    </string>

    <string name="offline">Offline</string>
    <string name="server_offline">Ops.. the server seems to be offline. Sorry! Wanna try later?</string>
    <string name="empty_cache">Empty cache</string>
    <string name="TricTrac" translatable="false">TricTrac</string>
    <string name="Philibert" translatable="false">Philibert</string>

    <string name="fragment_search_title" translatable="true">Internet search</string>
    <string name="fragment_description_title" translatable="true">Game\'s description</string>

    <string name="empty_cache_title" translatable="true">Empty cache</string>
    <string name="empty_cache_text" translatable="true">Do you really want to empty the cache?</string>

    <string name="about" translatable="true">About</string>
    <string name="about_text">
        Trolls De Jeux version %1$s.&lt;br/>
        &quot;One day, this app will brew your coffee!&quot;&lt;br/>
        Visit our website at &lt;a href="https://www.trollsdejeux.fr">trollsdejeux.fr&lt;/a>&lt;br/>
        Contact the developer at &lt;a href="mailto:massi@massi.rocks">massi@massi.rocks&lt;/a>
    </string>

    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>

    <string name="loading_cache" translatable="true">Loading cache</string>
    <string name="cache_error">
        I\'m afraid your cache is no longer valid.\n
        Please reload the users\' list by clicking on the nice little red button at the bottom right corner!
    </string>

    <string name="search_header" translatable="true">Search result</string>
    <string name="search_result" translatable="true">%1$d games found</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="register_header" translatable="true">Please complete the form below</string>
    <string name="register_bggNick" translatable="true">Your BGG account name</string>
    <string name="register_forumNick" translatable="true">Your name</string>
    <string name="register_email" translatable="true">Email address</string>
    <string name="register_password" translatable="true">Password</string>
    <string name="register_password_verify" translatable="true">Verify password</string>
    <string name="register_bggHandled" translatable="true">I own a BGG account!</string>
    <string name="register_submit" translatable="true">Go!</string>
    <string name="register_submit_wait" translatable="true">Please wait…</string>

    <string name="register_error_missing_fields" translatable="true">Some fields are missing!</string>
    <string name="register_error_missing_email" translatable="true">Invalid email!</string>
    <string name="register_error_passwords_mismatch" translatable="true">Passwords don\'t match!</string>
    <string name="register_error_generic" translatable="true">Something is wrong…</string>

    <string name="register_verify_email" translatable="true">Please check your email %1$s</string>
    <string name="register_verify_error" translatable="true">Registration failed: %1$s</string>
    <string name="login_header">Login</string>
    <string name="gameslist_you">Your collection!</string>

</resources>
