<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item android:id="@+id/expansions_toggle"
              android:title="@string/show_expansions"
              android:orderInCategory="100"
              app:showAsAction="never"/>

        <item android:id="@+id/sort_alpha"
              android:title="@string/sort_alpha"
              android:orderInCategory="101"
              app:showAsAction="never"/>

        <item android:id="@+id/sort_rank"
              android:title="@string/sort_bgg"
              android:orderInCategory="102"
              app:showAsAction="never"/>

        <item android:id="@+id/game_random"
              android:title="@string/game_random"
              android:orderInCategory="103"
              app:showAsAction="never"/>
    </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/empty_cache"
              android:title="@string/empty_cache"
              android:orderInCategory="104"
              app:showAsAction="never" />
    </group>
</menu>
