<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="rocks.massi.trollsgames.fragments.Register" android:orientation="vertical"
              android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_header" android:typeface="sans" android:textAlignment="center"
            android:textSize="21sp" android:id="@+id/f_register_header"/>

    <!-- Nick on BGG -->
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_bggNick" android:hint="@string/register_bggNick"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_forumNick" android:hint="@string/register_forumNick"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_email"
            android:hint="@string/register_email" style="@style/Widget.AppCompat.EditText"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password" android:hint="@string/register_password"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password_verify" android:hint="@string/register_password_verify"/>
    <CheckBox
            android:text="@string/register_bggHandled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/cb_bggHandled" android:checked="true"/>
    <Button
            android:text="@string/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/register_submit"
            style="@style/Widget.AppCompat.Button"/>

</LinearLayout>
